# open-meteo-etl

./: .gitignore  Makefile  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yml
etl_open_meteo/: config.py  main.py
etl_open_meteo/src/: utils.py  weather_query.py  weather_schema.py
open_meteo_etl/: config.py  main.py
open_meteo_etl/src/: weather_query.py  weather_schema.py
tests/test_src/: test_config.py
