[tool.poetry]
name = "open_meteo_etl"
version = "0.1.0"
description = "A Python project to ingest weather data from the OpenMeteo API."
authors = ["Guillaume Bournique <guillaume.bournique@gmail.com>"]
readme = "README.md"
packages = [{ include = "open_meteo_etl", from = "." }]


[tool.poetry.dependencies]
python = "^3.13"
numpy = "2.2.2"
openmeteo-requests = "^1.3.0"
pandas = "^2.2.3"
pyarrow = "^19.0.0"
pydantic = "^2.10.5"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
coverage = "^7.6.3"
isort = "^5.13.2"
mypy = "^1.12.0"
pandas-stubs = "^2.2.3.250308"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.9.3"
types-requests = "^2.32.0.20241016"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ruff
[tool.ruff]
line-length = 89
fix = true
target-version = "py313"
src = ["open_meteo_etl", "tests"]


# black
[tool.black]
line-length = 89
preview = true
enable-unstable-feature = ["string_processing"]
include = '\.pyi?$'
src = ["open_meteo_etl", "tests"]
target-version = ["py313"]


# isort
[tool.isort]
profile = "black"
line_length = 89
src_paths = ["open_meteo_etl", "tests"]


# autoflake
[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true
quiet = true
ignore-init-module-imports = true
target-python-versions = ["py313"]


# mypy
[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]
python_version = "3.13"
packages = ["open_meteo_etl"]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true


# coverage
[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:"
]
fail_under = 0
